# YetAnotherNessusParser

./: .gitignore  README.md  nessusParser.py  parser.py  pyproject.toml  requirements.txt  yanp.py
config/: consolidation_README.md  consolidation_rules.json.example
examples/: README.md  library_usage.py
modules/: api_formatter.py  cli.py  consolidation.py  file_utils.py  json_utils.py  logger.py  nessus.py
yanp/: __init__.py  cli.py
yanp/config/: __init__.py
yanp/core/: __init__.py  consolidator.py  formatter.py  nessus_parser.py  nmap_parser.py
yanp/docs/: Consolidation Engine.md  Library Usage.md  Module Expansion.md
yanp/utils/: __init__.py  file_utils.py  logger.py
yapp/: __init__.py  cli.py
yapp/config/: default_rules.json
yapp/core/: __init__.py  burp_parser.py  consolidator.py  nessus_parser.py  nmap_parser.py  processor.py
yapp/docs/: Library Usage.md  Module Expansion.md
yapp/utils/: __init__.py  display.py  file_utils.py  json_utils.py
