# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yanp"
version = "4.2.1"
description = "Yet Another Nessus Parser - A Python library for parsing and processing Nessus XML reports"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "AGPL-3.0"}
authors = [
    {name = "FlyingPhishy"},
]
keywords = ["nessus", "parser", "vulnerability", "security", "xml"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "isort>=5.0",
]

[project.urls]
Homepage = "https://github.com/FlyingPhish/YetAnotherNessusParser"
Repository = "https://github.com/FlyingPhish/YetAnotherNessusParser"
"Bug Tracker" = "https://github.com/FlyingPhish/YetAnotherNessusParser/issues"

[project.scripts]
yanp = "yanp.cli:cli_entry_point"

[tool.setuptools.packages.find]
include = ["yanp*"]

[tool.setuptools.package-data]
yanp = ["config/*.json"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]